--- a/web_dynamic/static/styles/track_collection.css
+++ b/web_dynamic/static/styles/track_collection.css
@@ -41,8 +41,7 @@ input[type=number] {
 }
 
 .form-container {
-    background: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(10px);
+    background:white;
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     border-radius: 10px;
     padding: 20px;
